--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - checkout
       - run:
           name: "Say World"
-          command: MY_VAR_VIJI       
+          command: echo $MY_VAR_VIJI       
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
